--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Project Earth</title>
+  <title>What is on Earth?</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
